# pixel_game_project

./: CMakeLists.txt  MakeFile  including_headers.h  main.cpp  readme.txt
Drawer/: Drawer.cpp  Drawer.h  Main_Menu.h
Entities/: Entities.cpp  Entities.h
Entity_Handler/: Entity_Handler.cpp  Entity_Handler.h
Game_World/: Game_World.cpp  Game_World.h
client/: client.h
link/: link.cpp  link.h
screenshots/: read.txt
server/: server.h
unit_tests/: unit_tests.cpp  unit_tests.h
vector2/: vector2.cpp  vector2.h
